fixed alignment on scroll icon

--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,31 @@ nav img{
 #scroll-icon {
 	position: absolute;
 	top: 85%;
-	left: 50%;
+	left: calc(50% - 20.5px); /* always aligns to the left of the image, we then take away half the size of the image to perfectly center*/ 
 }
 
+
+#about-section {
+	background-color: #efefef;
+	padding-top: 35px;
+}
+
+#about-section article {
+	padding: 0px;
+	width: 1302px;
+	margin: 0px auto;
+	padding: 0 32px;
+
+}
+
+h1 {
+	text-align: center;
+	padding-bottom: 30px;
+}
+
+p {
+	text-align: center;
+	box-sizing: border-box;
+	padding: 0 32px;
+}
 
